comecei a escrever o conteudo

--- a/index.html
+++ b/index.html
@@ -9,15 +9,25 @@
   <body>
     <main>
       <header>
-        <h1>Título do site</h1>
+        <h1>Curso grátis</h1>
       </header>
       <article>
-        <h2>Artigo 0001</h2>
-        <p>Texto artigo 0001</p>
+        <h2>Curso de HTML5 com CSS3</h2>
+        <p>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corporis
+          harum voluptate, magni cupiditate error reiciendis repellendus ad
+          fugit explicabo, iusto accusamus quidem, quaerat alias corrupti eos?
+          Nihil ut nulla saepe.
+        </p>
       </article>
       <article>
-        <h2>Artigo 0002</h2>
-        <p>Texto artigo 0002</p>
+        <h2>Curso de JavaScript</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis,
+          repellat id nobis magnam ab delectus voluptas temporibus expedita,
+          provident reprehenderit fuga molestiae maiores corporis, iure non
+          voluptates commodi aliquid at.
+        </p>
       </article>
     </main>
   </body>
